log
Wed, May 14, 2025  8:33:45 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025  8:35:21 AM: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:70:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
cc1.exe: all warnings being treated as errors
cfa6f73
Wed, May 14, 2025  8:35:51 AM: 
 sudoku.c | 14 --------------
 1 file changed, 14 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
sudoku.c:54:11: error: unused variable 'new' [-Werror=unused-variable]
     Node* new;
           ^~~
cc1.exe: all warnings being treated as errors
63a7dfa
Wed, May 14, 2025  8:37:37 AM: 
 sudoku.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
c900e95
Wed, May 14, 2025  8:40:01 AM: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:63:21: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                     add(list, new);
                     ^~~
cc1.exe: all warnings being treated as errors
143bb2f
Wed, May 14, 2025  8:44:49 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a5cc8dd
Wed, May 14, 2025  8:47:11 AM: 
 sudoku.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  5|3
total_score: 35/70
30a3bef
Wed, May 14, 2025  8:48:19 AM: 
 sudoku.c | 13 -------------
 1 file changed, 13 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:25: error: variable 'box' set but not used [-Werror=unused-but-set-variable]
     int row[9], col[9], box[9];
                         ^~~
sudoku.c:47:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k,l;
             ^
cc1.exe: all warnings being treated as errors
b728275
Wed, May 14, 2025  8:50:08 AM: 
 sudoku.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
6aaca3a
Sun, May 18, 2025  2:59:00 AM: 
 sudoku.c | 36 +++---------------------------------
 1 file changed, 3 insertions(+), 33 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:52:13: error: unused variable 'col' [-Werror=unused-variable]
         int col[10] = {0};
             ^~~
sudoku.c:51:13: error: unused variable 'fila' [-Werror=unused-variable]
         int fila[10] = {0};
             ^~~~
sudoku.c:47:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k,l;
             ^
sudoku.c:47:11: error: unused variable 'j' [-Werror=unused-variable]
     int i,j,k,l;
           ^
sudoku.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
2b03f37
Sun, May 18, 2025  3:01:52 AM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:55:17: error: unused variable 'num_col' [-Werror=unused-variable]
             int num_col = n->sudo[j][i];
                 ^~~~~~~
sudoku.c:52:13: error: unused variable 'col' [-Werror=unused-variable]
         int col[10] = {0};
             ^~~
sudoku.c:47:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k,l;
             ^
sudoku.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
15c04bf
Sun, May 18, 2025  3:08:57 AM: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  5|3
total_score: 35/70
00ce725
Sun, May 18, 2025  3:12:34 AM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
ab7a7dc
Sun, May 18, 2025  3:15:22 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
61f6cc2
